--- a/project.properties
+++ b/project.properties
@@ -12,6 +12,6 @@
 
 # Project target.
 target=android-16
-android.library.reference.1=..\\android-menudrawer\\library
-android.library.reference.2=..\\LibraryDirectoryPicker
-android.library.reference.3=..\\ActionBarSherlock\\library
+android.library.reference.1=../ActionBarSherlock/library
+android.library.reference.2=../DirectoryPicker
+android.library.reference.3=../android-menudrawer/library
